FIX: Dolistore Checks

--- a/splash/resources/dolistore/en/description.en.html
+++ b/splash/resources/dolistore/en/description.en.html
@@ -71,7 +71,7 @@ Universal, it does not worry about the type of data: an invoice, a customer, a b
         <li>Module version: 1.0.0</li>
         <li>Publisher/Licence: <strong>Splash Sync</strong> / <strong>GPL</strong></li>
         <li>Module Documentation: <strong><a href="https://github.com/SplashSync/Dolibarr/wiki" target="_blank">github.com/SplashSync/Dolibarr/wiki</a></strong></li>
-        <li>User interface language: <strong>English / French</strong></li>
+        <li>User interface language: <strong>English / French / Splanish</strong></li>
         <li>Support: <strong>Mail to contact@splashsync.com</strong>  </li>
     </ul>
 </p>
@@ -79,9 +79,9 @@ Universal, it does not worry about the type of data: an invoice, a customer, a b
 <p>
     <strong>Prerequisites:</strong>
     <ul>
-        <li>Dolibarr min version: <strong>3.6</strong></li>
+        <li>Dolibarr min version: <strong>9.0</strong></li>
         <li>Dolibarr max version: <strong>None</strong></li>
-        <li>PHP 5.6+ | PHP 7.0+</li>
+        <li>PHP 7.0+</li>
         <li>An active Splash Sync User Account</li>
     </ul>
 </p>
