--- a/splash/resources/dolistore/fr/description.fr.html
+++ b/splash/resources/dolistore/fr/description.fr.html
@@ -74,10 +74,10 @@ tous ne sont que des objets composés de champs qu'il faudra synchroniser.
 <p>
     <strong>Définition:</strong>
     <ul>
-        <li>Version actuelle: 1.1.0</li>
+        <li>Version actuelle: 1.6.0</li>
         <li>Publisher/Licence: <strong>Splash Sync</strong> / <strong>GPL</strong></li>
         <li>Documentation: <strong><a href="https://github.com/SplashSync/Dolibarr/wiki" target="_blank">github.com/SplashSync/Dolibarr/wiki</a></strong></li>
-        <li>Langues de l'interface: <strong>English / French</strong></li>
+        <li>Langues de l'interface: <strong>English / French / Spanish</strong></li>
         <li>Support: <strong>Par mail uniquement <a href="mailto::contact@splashsync.com" target="_blank">contact@splashsync.com</a></strong></li>
     </ul>
 </p>
@@ -85,9 +85,9 @@ tous ne sont que des objets composés de champs qu'il faudra synchroniser.
 <p>
     <strong>Prérequis:</strong>
     <ul>
-        <li>Dolibarr min version: <strong>4.0</strong></li>
+        <li>Dolibarr min version: <strong>9.0</strong></li>
         <li>Dolibarr max version: <strong>Aucune</strong></li>
-        <li>PHP 5.6+ | PHP 7.0+</li>
+        <li>PHP 7.0+</li>
         <li>Un compte Splash Sync </li>
     </ul>
 </p>
