FIX: Product Variants Parent Detection

--- a/splash/resources/dolistore/en/description.en.html
+++ b/splash/resources/dolistore/en/description.en.html
@@ -43,7 +43,7 @@ Universal, it does not worry about the type of data: an invoice, a customer, a b
 <h4>Centralize your sales workflow</h4>
 <p>
     This module was designed to transform Dolibarr into the heart of your business organization. 
-    By importing and synchronizing all your sales informations, you can access all you sales in a single place, whatever the sales channels.
+    By importing and synchronizing all your sales information, you can access all you sales in a single place, whatever the sales channels.
 </p>
 <h4>Synchronize Products Stocks</h4>
 <p>
@@ -53,7 +53,7 @@ Universal, it does not worry about the type of data: an invoice, a customer, a b
 <h4>Merge all your customers data</h4>
 <p>
     Once all your modules connected, use the Object Linked to identify and merge all your customers profiles into a single Splash entity. 
-    This way, all similar informations will be shared and synchronized anywhere, from CRM to E-Commerce.
+    This way, all similar information will be shared and synchronized anywhere, from CRM to E-Commerce.
 </p>
 <h4>Consolidate &amp; Simplify your Financial Analytics</h4>
 <p>
@@ -68,9 +68,9 @@ Universal, it does not worry about the type of data: an invoice, a customer, a b
 <p>
     <strong>Definition</strong>
     <ul>
-        <li>Module version: 1.0.0</li>
+        <li>Module version : <span class="module_version_desc">auto</span></li>
         <li>Publisher/Licence: <strong>Splash Sync</strong> / <strong>GPL</strong></li>
-        <li>Module Documentation: <strong><a href="https://github.com/SplashSync/Dolibarr/wiki" target="_blank">github.com/SplashSync/Dolibarr/wiki</a></strong></li>
+        <li>Module Documentation: <strong><a href="https://splashsync.gitlab.io/Dolibarr/" target="_blank">splashsync.gitlab.io/Dolibarr</a></strong></li>
         <li>User interface language: <strong>English / French / Splanish</strong></li>
         <li>Support: <strong>Mail to contact@splashsync.com</strong>  </li>
     </ul>
@@ -79,9 +79,9 @@ Universal, it does not worry about the type of data: an invoice, a customer, a b
 <p>
     <strong>Prerequisites:</strong>
     <ul>
-        <li>Dolibarr min version: <strong>9.0</strong></li>
+        <li>Dolibarr min version: <strong><span class="dolibarr_min_desc">auto</span></strong></li>
         <li>Dolibarr max version: <strong>None</strong></li>
-        <li>PHP 7.0+</li>
+        <li>PHP 7.4+</li>
         <li>An active Splash Sync User Account</li>
     </ul>
 </p>
@@ -98,11 +98,3 @@ Universal, it does not worry about the type of data: an invoice, a customer, a b
         <li>Module is then available and can be activated.</li>
     </ul>
 </p>
-
-<a href="https://github.com/SplashSync/Dolibarr">
-    <img 
-        style="position: absolute; top: 0; right: 0; border: 0;" 
-        src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" 
-        alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
-        >
-</a>
