--- a/splash/resources/dolistore/fr/description.fr.html
+++ b/splash/resources/dolistore/fr/description.fr.html
@@ -1,10 +1,10 @@
 <img src="http://www.splashsync.com/bundles/theme/img/splash-logo.png" alt="Logo Splash" width="418" height="112" style="display: block; margin-left: auto; margin-right: auto;" />
-<h2 style="text-align: center;">Splash, le système de synchronisation des entreprises innovantes!</h2>
+<h2 style="text-align: center;">Splash, le système de synchronisation des entreprises innovantes !</h2>
 
 
-Splash est un système de synchronisation innovant pour une multitude de raisons! Grâce à sa stratégie déclarative, 
+Splash est un système de synchronisation innovant pour une multitude de raisons ! Grâce à sa stratégie déclarative,
 Splash est un système ouvert, capable de gérer tout type de données, quel qu'en soit la complexité. 
-Universel, il ne se soucis pas du type des données: une facture, un client, un article de blog, un commentaire, 
+Universel, il ne se soucis pas du type des données : une facture, un client, un article de blog, un commentaire,
 tous ne sont que des objets composés de champs qu'il faudra synchroniser.
 
 <h4>Synchroniser tous types de données</h4>
@@ -14,17 +14,19 @@ tous ne sont que des objets composés de champs qu'il faudra synchroniser.
 
 <h4>Simplifiez-vous le E-Commerce</h4>
 <p>
-    Synchroniser vos stocks entre plusieurs site marchands? Partager vos données client entres tous vos services? Avec Splash, ce n'est pas juste possible, c'est simple et sans développements.
+    Synchroniser vos stocks entre plusieurs sites marchands ? Partager vos données client entre tous vos services ?
+    Avec Splash, ce n'est pas juste possible, c'est simple et sans développements.
 </p>
 
 <h4>Totalement Universel</h4>
 <p>
-    Changez votre façon de gérer vos applications dans le cloud! Splash est un connecteur de données pas comme les autres. Pourquoi? Il est totalement universel!!
+    Changez votre façon de gérer vos applications dans le cloud !
+    Splash est un connecteur de données pas comme les autres. Pourquoi ? Il est totalement universel!!
 </p>
 
 <h4>En savoir plus sur Splash</h4>
 <p>
-    Ce module fait parti du projet <a href="http://www.splashsync.com/">SplashSync</a>.
+    Ce module fait partie du projet <a href="http://www.splashsync.com/">SplashSync</a>.
 </p>
 
 <p>
@@ -72,42 +74,34 @@ tous ne sont que des objets composés de champs qu'il faudra synchroniser.
 <h2>Le Module Splash pour Dolibarr</h2>
 
 <p>
-    <strong>Définition:</strong>
+    <strong>Définition :</strong>
     <ul>
-        <li>Version actuelle: 1.6.0</li>
+        <li>Version actuelle : <span class="module_version_desc">auto</span></li>
         <li>Publisher/Licence: <strong>Splash Sync</strong> / <strong>GPL</strong></li>
-        <li>Documentation: <strong><a href="https://github.com/SplashSync/Dolibarr/wiki" target="_blank">github.com/SplashSync/Dolibarr/wiki</a></strong></li>
+        <li>Documentation: <strong><a href="https://splashsync.gitlab.io/Dolibarr/" target="_blank">splashsync.gitlab.io/Dolibarr</a></strong></li>
         <li>Langues de l'interface: <strong>English / French / Spanish</strong></li>
-        <li>Support: <strong>Par mail uniquement <a href="mailto::contact@splashsync.com" target="_blank">contact@splashsync.com</a></strong></li>
+        <li>Support : <strong>Par mail uniquement <a href="mailto::contact@splashsync.com" target="_blank">contact@splashsync.com</a></strong></li>
     </ul>
 </p>
 
 <p>
-    <strong>Prérequis:</strong>
+    <strong>Prérequis :</strong>
     <ul>
-        <li>Dolibarr min version: <strong>9.0</strong></li>
-        <li>Dolibarr max version: <strong>Aucune</strong></li>
-        <li>PHP 7.0+</li>
+        <li>Dolibarr min version : <strong><span class="dolibarr_min_desc">auto</span></strong></li>
+        <li>Dolibarr max version : <strong>Aucune</strong></li>
+        <li>PHP 7.4+</li>
         <li>Un compte Splash Sync </li>
     </ul>
 </p>
 
 <p>
-    <strong>Installation:</strong>
+    <strong>Installation :</strong>
     <ul>
         <li>
             Télécharger le fichier archive du module (.zip) depuis le site web <a title="http://www.dolistore.com" href="http://www.dolistore.com/" target="_blank" rel="nofollow">DoliStore.com</a> 
-            ou directement surnotre site <a href="http://www.splashsync.com" target="_blank">Splashsync</a>
+            ou directement sur notre site <a href="http://www.splashsync.com" target="_blank">Splashsync</a>
         </li>
         <li>Copier le contenu du module sur le dossier Dolibarr htdocs (htdocs/splash)</li>
         <li>Activer et configurer le module</li>
     </ul>
 </p>
-
-<a href="https://github.com/SplashSync/Dolibarr">
-    <img 
-        style="position: absolute; top: 0; right: 0; border: 0;" 
-        src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" 
-        alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
-        >
-</a>
